<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".calendarPageActivity">

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/textView"
    android:layout_marginTop="226dp"
    android:text="@string/location" />

<Button
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/button2"
    android:layout_marginTop="120dp"
    android:onClick="addEvent"
    android:text="@string/add"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.93" />

<Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="40dp"

    android:layout_below="@+id/editText6"
    android:layout_toEndOf="@+id/textView5"
    android:text="@string/lookup"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.913" />

<TextView
    android:id="@+id/textView"
    android:layout_width="73dp"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="15dp"
    android:layout_marginTop="5dp"
    android:text="@string/title" />

<EditText
    android:id="@+id/editText"
    android:layout_width="wrap_content"
    android:layout_height="36dp"
    android:layout_alignEnd="@+id/editText2"
    android:layout_alignTop="@+id/textView"
    android:layout_marginTop="0dp"
    android:ems="10"
    android:inputType="textPersonName" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:cursorVisible="true"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/textView"
    android:layout_marginTop="70dp"
    android:text="@string/desc" />

<EditText
    android:id="@+id/editText2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/editText3"
    android:layout_alignTop="@+id/textView2"
    android:layout_marginTop="-25dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:visibility="visible" />

<EditText
    android:id="@+id/editText3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignTop="@+id/textView5"
    android:layout_marginEnd="14dp"
    android:layout_marginTop="-15dp"
    android:ems="10"
    android:inputType="textPersonName" />

<EditText
    android:id="@+id/editText4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/editText"
    android:layout_alignTop="@+id/textView3"
    android:layout_marginTop="-26dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:visibility="visible" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/textView"
    android:layout_marginTop="110dp"
    android:text="@string/location" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignStart="@+id/textView5"
    android:layout_marginTop="185dp"
    android:text="@string/lookupPlaceholder"
    android:textSize="16sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/textView7"
    android:layout_width="102dp"
    android:layout_height="wrap_content"
    android:layout_alignTop="@id/textView5"
    android:layout_alignBaseline="@+id/editText6"
    android:layout_alignStart="@+id/textView5"
    android:text="@string/time"
    android:textAlignment="viewStart" />

<EditText
    android:id="@+id/editText6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/editText"
    android:layout_below="@+id/editText3"
    android:ems="10"
    android:focusable="false"
    android:inputType="textPersonName"
    android:onClick="showDate" />

<ListView
    android:id="@+id/listView"
    android:layout_width="250dp"

    android:layout_height="153dp"

    android:layout_alignParentBottom="true"

    android:layout_alignParentStart="true"
    android:layout_marginStart="56dp" />


</RelativeLayout>